--- a/_posts/2018-06-30-release-1.6.0.md
+++ b/_posts/2018-06-30-release-1.6.0.md
@@ -7,13 +7,9 @@ See the
 [release](https://github.com/dhlab-basel/Knora/releases/tag/v1.6.0) and closed tickets on the
 [v1.6.0 milestone](https://github.com/dhlab-basel/Knora/milestone/10) on Github.
 
-#### Required changes to existing data:
+**Required changes to existing data:**
+
 A project is now required to have at least one description, so potentially a description will need to be added to those projects that don't have one.
 
 
-#### New features:
-
-
-
-#### Bugfixes:
 
