add manual section; fix styling issues in post and release notes

--- a/_posts/2018-06-30-release-1.6.0.md
+++ b/_posts/2018-06-30-release-1.6.0.md
@@ -1,6 +1,6 @@
 ---
 title: Release 1.6.0
-date: 2018-06-30
+type: pre-release
 link: https://github.com/dhlab-basel/Knora/releases/tag/v1.6.0
 ---
 See the
