--- a/_posts/2018-09-25-release-1.0.0.md
+++ b/_posts/2018-09-25-release-1.0.0.md
@@ -4,7 +4,16 @@ type: major
 link: https://github.com/lakto/dokumentado/releases
 ---
 
-**Features:**
+First version of Dokumentado — a documentation and landing page template built with Jekyll and styled with Material Design Lite.
 
+**Features:**
+- Landing page
+- Documentation
+- Manual
+- Material Design Lite
+- Own markdown file for list of features
+- Release notes
+- Search
+- Error page
 
 **Fixes:**
